# AICoreDirector

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Design.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  README_backup.md  README_zh-CN.md  USAGE.md  cursor_.md  docker-compose.yml  llm_.yml  llm_models.yaml  llm_models_copy.yaml  llm_models_pending.yaml  log_config.json  main-v0.py  main.py  openapi.json  package-lock.json  pyproject.toml  rename_info.txt  replace_names.py  requirements.txt  verify_layout.py
.github/: PULL_REQUEST_TEMPLATE.md  project-description.md
adapters/: llm_adapter.py  llm_info_fetcher.py
api/: main.py  prompt_api.py
business/: doc_extractor.py  extract_plugins.py  hello_plugin.py
config_prompts/: prompt.ini  prompt_tmp.ini_backup  prompt_tmp.ini_delete_backup
config_prompts_backup/: prom_副本
core/: health_checker.py  logging_config.py  model_router.py  plugin_loader.py  prompt_manager.py  state_manager.py  statistics.py
docs/: AICoreDirector_20min_讲稿.md  AICoreDirector_business_plan.md  AICoreDirector_business_plan_v2.md  AICoreDirector_设计方案生成.py  CNAME  GitHub项目核心关键词策略.md  application.yml  cursor_github.md  index.html  two_tier_user_system_design.md  ~$公司级模型服务层.docx  《AI基础能力中枢-AICoreDirector》_设计方案.docx  《AI基础能力中枢》_设计方案.docx  《AI基础能力中枢》顶层设计.pptx  安装venv.md  构建公司级模型服务层.docx  顶层设计x.pptx
examples/: client_batch_with_global_preference.py  client_batch_with_session_preference.py  client_demo.py  client_hello.py  client_llm_balancer_demo.py  llm_stream_demo.py  management_client.py
frontend/: README.md  (+6 more)
(+21 files in other folders)
